opam-version: "2.0"
name: "httpaf-lwt"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Anton Bachin <antonbachin@yahoo.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpaf"
bug-reports: "https://github.com/inhabitedtype/httpaf/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpaf.git"
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt"
  "httpaf"
  "mirage-conduit"
  "cstruct"
  "jbuilder" {build & >= "1.0+beta10"}
  "lwt"
]
synopsis: "Lwt support for http/af"
