(executable
 (name wrk_async_benchmark)
 (modules wrk_async_benchmark)
 (libraries httpaf httpaf_examples httpaf-async async core))

(executable
 (name wrk_lwt_benchmark)
 (modules Wrk_lwt_benchmark)
 (libraries httpaf httpaf_examples httpaf-lwt-unix lwt.unix base))

(alias
 (name benchmarks)
 (deps (glob_files *.exe)))
